--- a/packages/flutter_plugin_android_lifecycle/android/build.gradle
+++ b/packages/flutter_plugin_android_lifecycle/android/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-
+    def lifecycle_version = "2.2.0"
     defaultConfig {
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,6 +34,7 @@ android {
 
     dependencies {
         implementation "androidx.annotation:annotation:1.1.0"
+        implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     }
 }
 
